fix api createOrUpdateEstimate and delete api createOrUpdateBilling
